WDD_second_week

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwadwo Amankwaa | WDD 130 </title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <meta name="Description" content="Amankwaa WDD130, This page is a test to bigger things.">
+    <meta name="Author" content="Amankwaa Antwi Kwadwo">
 </head>
 
 <body>
@@ -24,6 +27,11 @@
             I enjoy spending time with my niece and a fan of football as well.
             I enjoy reading the scriptures for inspiration</p>
     </main>
+    <aside>
+        <h2>Accra-Ghana</h2>
+        <img src="images/ghana.png" alt="Ghana Coat of Arms">
+        <p>Ghana is a Country in the West of Africa. Ghana shares borders with Cote D'Ivoire, Togo and Benin. Ghana is a lovely country, full of Tourist sites.</p>
+    </aside>
     <footer>
         <p> © 2024 🦓Kwadwo Amankwaa🦓 Accra, Ghana</p>
     </footer>
