--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -34,19 +34,20 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem qui dolore voluptas. Nostrum amet
                     quisquam exercitationem aspernatur, minima et consequatur, similique ea ut doloribus at ex, eos
                     cumque accusantium. Officiis?</p>
-                    <p>
-                        Enim, ab harum! Temporibus qui odio eos numquam eveniet aliquid magnam ducimus sapiente nam voluptas
-                        amet similique enim, error quis quam? Consectetur voluptatem, dolorum quas explicabo amet reiciendis
-                        dicta quaerat?
-                    </p>
-                    <p>d saepe quia obcaecati quibusdam at reprehenderit commodi fugiat repudiandae modi fugit dignissimos
+                <p>
+                    Enim, ab harum! Temporibus qui odio eos numquam eveniet aliquid magnam ducimus sapiente nam voluptas
+                    amet similique enim, error quis quam? Consectetur voluptatem, dolorum quas explicabo amet reiciendis
+                    dicta quaerat?
+                </p>
+                <p>d saepe quia obcaecati quibusdam at reprehenderit commodi fugiat repudiandae modi fugit dignissimos
                     autem deserunt blanditiis iste est, nemo, corrupti inventore sunt quos culpa optio adipisci.
                     Excepturi quia aut iste.</p>
             </article>
         </section>
     </main>
     <aside>
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg" width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg"
+            width="200">
     </aside>
     <footer>Amankwaa Kwadwo</footer>
 </body>
