--- a/Week02/holygrail.html
+++ b/Week02/holygrail.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwadwo Amankwaa | Holy Grail layout </title>
+    <meta name="Description" content="A common layout.">
+    <meta name="Author" content="Amankwaa Antwi Kwadwo">
 </head>
 
 <body>
@@ -34,21 +36,23 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem qui dolore voluptas. Nostrum amet
                     quisquam exercitationem aspernatur, minima et consequatur, similique ea ut doloribus at ex, eos
                     cumque accusantium. Officiis?</p>
-                    <p>
-                        Enim, ab harum! Temporibus qui odio eos numquam eveniet aliquid magnam ducimus sapiente nam voluptas
-                        amet similique enim, error quis quam? Consectetur voluptatem, dolorum quas explicabo amet reiciendis
-                        dicta quaerat?
-                    </p>
-                    <p>d saepe quia obcaecati quibusdam at reprehenderit commodi fugiat repudiandae modi fugit dignissimos
+                <p>
+                    Enim, ab harum! Temporibus qui odio eos numquam eveniet aliquid magnam ducimus sapiente nam voluptas
+                    amet similique enim, error quis quam? Consectetur voluptatem, dolorum quas explicabo amet reiciendis
+                    dicta quaerat?
+                </p>
+                <p>d saepe quia obcaecati quibusdam at reprehenderit commodi fugiat repudiandae modi fugit dignissimos
                     autem deserunt blanditiis iste est, nemo, corrupti inventore sunt quos culpa optio adipisci.
                     Excepturi quia aut iste.</p>
             </article>
         </section>
     </main>
     <aside>
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg" width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg" width="200" alt="accra-ghana-temple">
     </aside>
-    <footer>Amankwaa Kwadwo</footer>
+    <footer>
+        <p>Kwadwo Amankwaa</p> 
+    </footer>
 </body>
 
 </html>
