--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwadwo Amankwaa | Holy Grail layout </title>
+    <meta name="Description" content="A common layout.">
+    <meta name="Author" content="Amankwaa Antwi Kwadwo">
 </head>
 
 <body>
@@ -46,10 +48,11 @@
         </section>
     </main>
     <aside>
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg"
-            width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x250/accra-ghana-temple-758797-wallpaper.jpg" width="200" alt="accra-ghana-temple">
     </aside>
-    <footer>Amankwaa Kwadwo</footer>
+    <footer>
+        <p>Kwadwo Amankwaa</p> 
+    </footer>
 </body>
 
 </html>
