--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwadwo Amankwaa | WDD 130 </title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="Description" content="Amankwaa WDD130, This page is a test to bigger things.">
-    <meta name="Author" content="Amankwaa Antwi Kwadwo">
+    <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things.">
+    <meta name="author" content="Amankwaa Antwi Kwadwo">
 </head>
 
 <body>
