--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kwadwo Amankwaa | WDD 130 </title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things.">
+    <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things. it is a page built with the helps of my heavenly Father and the help of my teacher brother Borcherds">
     <meta name="author" content="Amankwaa Antwi Kwadwo">
 </head>
 
