--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwadwo Amankwaa | WDD 130 </title>
+    <title>Kwadwo Amankwaa | WDD 130 |Holy Grail Layout</title>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things. it is a page built with the helps of my heavenly Father and the help of my teacher brother Borcherds">
     <meta name="author" content="Amankwaa Antwi Kwadwo">
