--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwadwo Amankwaa | WDD 130 site-plan </title>
+    <title>Kwadwo Amankwaa | WDD 130 |Site Plan </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Madimi+One&family=Modak&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
     <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things. it is a page built with the helps of my heavenly Father and the help of my teacher brother Borcherds">
     <meta name="author" content="Amankwaa Antwi Kwadwo">
@@ -48,6 +51,8 @@
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="images/Jesus.png" alt="About Us Page Wireframe Design" width="700">
+        <h3>Aboout Us Page Wireframe</h3>
+        <img src="images/Jesus.png" width="700">
     </main>
     <footer>
         <p>©️2024 🦓Amankwaa Kwadwo Antwi🦓 WDD130</p>
