--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,7 +50,7 @@
                 <img src="images/x.svg" alt="x">
             </a>
             <a href="https://www.instagram.com/dallasrafting07/">
-                <img src="images/instagram.svg" alt="instagram">
+                <img src="images/instagram/dallasrafting07/.svg" alt="instagram">
             </a>
         </nav>
     </footer>
