--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.google.com/specimen/PT+Serif">
     <link rel="preconnect" href="https://fonts.google.com/specimen/PT+Serif" crossorigin="">
     <link rel="preconnect" href="https://fonts.google.com/specimen/PT+Serif" rel="stylesheet">
+    <meta name="description" content="Amankwaa WDD130, This page is a test to bigger things. it is a page built with the helps of my heavenly Father and the help of my teacher brother Borcherds">
+    <meta name="author" content="Amass site">
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
             <img src="images/deso-boats.jpg" alt="deso-boats">
             <h1>Amankwaa Rafting</h1>
             <article>
-                <img src="images/rafting21_600" alt="Happy Client">
+                <img src="images/rafting21_600.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsam, fuga officiis, aspernatur quaerat maxime rem eveniet dolorum, quis sit dolores. Iure sint odit eius. Doloribus vel saepe tempora quibusdam!</p>
             </article>
         </div>
@@ -33,7 +35,7 @@
         </section>
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/elves-chasm.jpp" alt="elves-chasm">
+            <img src="images/elves-chasm.jpg" alt="elves-chasm">
             <img src="images/littlecolorado.jpg" alt="littlecolorado">
             <img src="images/ik-rapid.jpg" alt="ik-rapid">
             <img src="images/rafting58_600.jpg" alt="rafting58_600">
