--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,10 +22,10 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/deso-boats.jpg" alt="deso-boats">
+            <img src="images/desoboats.jpg" alt="desoboats">
             <h1>Amankwaa Rafting</h1>
             <article>
-                <img src="images/rafting21_600.jpg" alt="Happy Client">
+                <img src="images/rafting21600.jpg" alt="Happy Client">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsam, fuga officiis, aspernatur quaerat maxime rem eveniet dolorum, quis sit dolores. Iure sint odit eius. Doloribus vel saepe tempora quibusdam!</p>
             </article>
         </div>
@@ -35,11 +35,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/elves-chasm.jpg" alt="elves-chasm">
+            <img src="images/elveschasm.jpg" alt="elves-chasm">
             <img src="images/littlecolorado.jpg" alt="littlecolorado">
-            <img src="images/ik-rapid.jpg" alt="ik-rapid">
-            <img src="images/rafting58_600.jpg" alt="rafting58_600">
-            <img src="images/river-narrow.jpg" alt="river-narrow">
+            <img src="images/ikrapid.jpg" alt="ik-rapid">
+            <img src="images/rafting58600.jpg" alt="rafting58_600">
+            <img src="images/rivernarrow.jpg" alt="river-narrow">
         </section>
     </main>
     <footer>
