--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,11 +35,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/elveschasm.jpg" alt="elves-chasm">
+            <img src="images/elveschasm.jpg" alt="elveschasm">
             <img src="images/littlecolorado.jpg" alt="littlecolorado">
-            <img src="images/ikrapid.jpg" alt="ik-rapid">
-            <img src="images/rafting58600.jpg" alt="rafting58_600">
-            <img src="images/rivernarrow.jpg" alt="river-narrow">
+            <img src="images/ikrapid.jpg" alt="ikrapid">
+            <img src="images/rafting58600.jpg" alt="rafting58600">
+            <img src="images/rivernarrow.jpg" alt="rivernarrow">
         </section>
     </main>
     <footer>
