--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,6 +19,16 @@
             <a href="contact.html">contact</a>
         </nav>
         <img src="images/circlelogo.jpeg" alt="Rafting" width="200">
+        <img src="https://brotherblazzard.github.io/images/icons/coloredGears.png" alt="Sample Logo">
+        <h1>Wasatch Accusystems</h1>
+        <nav>
+            <ul class="navigation">
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="hero">
@@ -55,6 +65,7 @@
                 <img src="images/instagram/dallasrafting07/.svg" alt="instagram">
             </a>
         </nav>
+
     </footer>
 
 </body>
