--- a/wwr/about.html
+++ b/wwr/about.html
@@ -64,6 +64,7 @@
             <a href="https://www.instagram.com/dallasrafting07/">
                 <img src="images/instagram/dallasrafting07/.svg" alt="instagram">
             </a>
+            <div style="clear: right"></div>
         </nav>
 
     </footer>
