--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,6 +55,7 @@
     <footer>
         <p>© 2024 🦓Kwadwo Amankwaa🦓 Accra, Ghana</p>
         <nav class="Socialinks">
+            <div style="clear: right"></div>
             <a href="https://facebook.com">
                 <img src="images/facebook.svg" alt="facebook">
             </a>
