--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,17 +55,19 @@
     <footer>
         <p>© 2024 🦓Kwadwo Amankwaa🦓 Accra, Ghana</p>
         <nav class="Socialinks">
-            <div style="clear: right"></div>
+            
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="facebook">
+                <img src="images/facebook.png" alt="facebook">
+                <div style="clear: right"></div>
             </a>
             <a href="https://x.com">
-                <img src="images/x.svg" alt="x">
+                <img src="images/twitter.png" alt="x">
+                <div style="clear: right"></div>
             </a>
             <a href="https://www.instagram.com/dallasrafting07/">
-                <img src="images/instagram/dallasrafting07/.svg" alt="instagram">
+                <img src="images/Instagram.png" alt="instagram">
+                <div style="clear: left"></div>
             </a>
-            <div style="clear: right"></div>
         </nav>
 
     </footer>
